gcc/testsuite/gdc.test/runnable/link14074b.d
import imports.link14074z;

void main()
{
    replaceAllWith!()(1);
}
