gcc/testsuite/gdc.test/fail_compilation/ice7782.d
import imports.ice7782algorithm;
import imports.ice7782range. imports.ice7782math;

void main() {}
